--- a/tutorials/seq2seq_tutorial.html
+++ b/tutorials/seq2seq_tutorial.html
@@ -25,15 +25,15 @@
 
   
 
-  <link rel="stylesheet" href="../_static/css/theme.css" type="text/css" />
-  <!-- <link rel="stylesheet" href="../_static/pygments.css" type="text/css" /> -->
+  <link rel="stylesheet" href="../static/css/theme.css" type="text/css" />
+  <!-- <link rel="stylesheet" href="../static/pygments.css" type="text/css" /> -->
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="tasktk package" href="../tasktk.html" />
     <link rel="prev" title="Welcome to dialoge zone’s documentation!" href="../index.html" /> 
 
   
-  <script src="../_static/js/modernizr.min.js"></script>
+  <script src="../static/js/modernizr.min.js"></script>
 </head>
 
 <div class="container-fluid header-holder tutorials-header" id="header-holder">
@@ -695,7 +695,7 @@ candidates, check out the source code at parlai/agents/seq2seq.</p>
   
 
      
-       <script type="text/javascript" id="documentation_options" data-url_root="../" src="../_static/documentation_options.js"></script>
+       <script type="text/javascript" id="documentation_options" data-url_root="../" src="../static/documentation_options.js"></script>
          <script type="text/javascript" src="../_static/jquery.js"></script>
          <script type="text/javascript" src="../_static/underscore.js"></script>
          <script type="text/javascript" src="../_static/doctools.js"></script>
@@ -704,9 +704,9 @@ candidates, check out the source code at parlai/agents/seq2seq.</p>
 
   
 
-  <script type="text/javascript" src="../_static/js/vendor/popper.min.js"></script>
-  <script type="text/javascript" src="../_static/js/vendor/bootstrap.min.js"></script>
-  <script type="text/javascript" src="../_static/js/theme.js"></script>
+  <script type="text/javascript" src="../static/js/vendor/popper.min.js"></script>
+  <script type="text/javascript" src="../static/js/vendor/bootstrap.min.js"></script>
+  <script type="text/javascript" src="../static/js/theme.js"></script>
 
   <script type="text/javascript">
       jQuery(function () {
@@ -767,7 +767,7 @@ candidates, check out the source code at parlai/agents/seq2seq.</p>
 
   <!-- End Mobile Menu -->
 
-  <script type="text/javascript" src="../_static/js/vendor/anchor.min.js"></script>
+  <script type="text/javascript" src="../static/js/vendor/anchor.min.js"></script>
 
   <script type="text/javascript">
     $(document).ready(function() {
