--- a/tutorials/seq2seq_tutorial.html
+++ b/tutorials/seq2seq_tutorial.html
@@ -47,23 +47,23 @@
           </li>
 
           <!-- <li>
-            <a href="https://blpeng1991.github.com/DialogueZoneDocs/features">Features</a>
+            <a href="https://blpeng1991.github.io/DialogueZoneDocs/features">Features</a>
           </li>
 
           <li>
-            <a href="https://blpeng1991.github.com/DialogueZoneDocs/ecosystem">Ecosystem</a>
+            <a href="https://blpeng1991.github.io/DialogueZoneDocs/ecosystem">Ecosystem</a>
           </li>
 
           <li>
-            <a href="https://blpeng1991.github.com/DialogueZoneDocs/blog/">Blog</a>
+            <a href="https://blpeng1991.github.io/DialogueZoneDocs/blog/">Blog</a>
           </li> -->
 
           <li>
-            <a href="https://blpeng1991.github.com/DialogueZoneDocs/tutorials">Tutorials</a>
+            <a href="https://blpeng1991.github.com/DialogueZoneDocs/">Tutorials</a>
           </li>
 
           <li>
-            <a href="https://blpeng1991.github.com/DialogueZoneDocs/index.html">Docs</a>
+            <a href="https://blpeng1991.github.io/DialogueZoneDocs/index.html">Docs</a>
           </li>
 
           
@@ -742,19 +742,19 @@ candidates, check out the source code at parlai/agents/seq2seq.</p>
           </li>
 
           <li>
-            <a href="https://blpeng1991.github.com/DialogueZoneDocs/blog/">Blog</a>
+            <a href="https://blpeng1991.github.io/DialogueZoneDocs/blog/">Blog</a>
           </li>
 
           <li>
-            <a href="https://blpeng1991.github.com/DialogueZoneDocs/tutorials">Tutorials</a>
+            <a href="https://blpeng1991.github.com/DialogueZoneDocs/">Tutorials</a>
           </li>
 
           <li>
-            <a href="https://blpeng1991.github.com/DialogueZoneDocs/index.html">Docs</a>
+            <a href="https://blpeng1991.github.io/DialogueZoneDocs/index.html">Docs</a>
           </li>
 
           <li>
-            <a href="https://blpeng1991.github.com/DialogueZoneDocs/resources">Resources</a>
+            <a href="https://blpeng1991.github.io/DialogueZoneDocs/resources">Resources</a>
           </li>
 
           <li>
